--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="favicon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0a0e12" />
     <meta
       name="description"
-      content="The no-fuss PodCast player."
+      content="The no fuss PodCast player."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
