--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,13 @@
     <meta name="theme-color" content="#0a0e12" />
     <meta
       name="description"
-      content="The no fuss PodCast player."
+      content="The no fuss podcast player."
     />
+    <meta property="og:image" content="https://podcrush.nystad.io/ogimage.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="628" />
+    <meta property="og:image:alt" content="PodCrush logo" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
