Style fixes, meta

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#0a0e12" />
     <meta
       name="description"
-      content="The no fuss podcast player."
+      content="The no fuss podcast player: Purely online, lives in your browser, needs no account. Just listen!"
     />
     <meta property="og:image" content="https://podcrush.nystad.io/ogimage.png" />
     <meta property="og:image:type" content="image/png" />
@@ -29,10 +29,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>PodCrush</title>
+    <style type="text/css">body {background: #000; color: #ccc; font-family: sans-serif;}</style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <h1>PodCrush</h1>
+      <p>PodCrush is an online podcast player that requires no account or sign up. Just listen to your favorite podcasts directly in your browser.</p>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
