--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="628" />
     <meta property="og:image:alt" content="PodCrush logo" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <title>PodCrush</title>
     <script>
       window.global = window;
